--- a/aoi_helene_config.json
+++ b/aoi_helene_config.json
@@ -2,8 +2,7 @@
   {
     "_comments": [
       "expid and the first part of aoi_points.file should be the same",
-      "users only need to modify expid and experiment_root for the expriment on baseline",
-      "experiment_root and aoi_points path should be absolute paths"
+      "users only need to modify expid and experiment_root for the expriment on baseline"
     ],
     "expid": "helene",
     "experiment_root": "./${expid}",
@@ -20,11 +19,13 @@
     "account": "CLI185",
     "partition": "batch_ccsi",
     "nodes": 1,
-    "time": "6:00:00",
+    "time": "12:00:00",
     "mem": "500GB",
-    "module": "python/3.11-anaconda3",
-    "conda_activate": "/ccsopen/home/wangd/compEnv",
-    "tasks": 4
+    "tasks": 4,
+    "bootstrap": [
+    "source /sw/baseline/nsp/init/profile",
+    "source /gpfs/wolf2/cades/cli185/proj-shared/wangd/kiloCraft/python_test_env/activate_shared_env.sh"
+    ]
   },
   "e3sm": {
     "din_root": "//gpfs/wolf2/cades/cli185/world-shared/e3sm",
